[package]
name = "bevy_mod_debugdump"
version = "0.10.0"
repository = "https://github.com/ka-de/bevy_mod_debugdump"
readme = "README.md"
license = "MIT"
description = "Visualization tools for bevy"
keywords = ["bevy", "schedule", "visual", "render", "graph"]
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
edition = "2021"
exclude = ["docs/*"]

[features]
default = ["render_graph"]
render_graph = []

[dependencies]
bevy_ecs = { version = "0.13" }
bevy_app = { version = "0.13" }
bevy_utils = { version = "0.13" }
bevy_render = { version = "0.13" }
pretty-type-name = "1.0"
petgraph = "0.6"
once_cell = "1.17"

[dev-dependencies]
bevy = { version = "0.13" }

[[example]]
name = "print_render_graph"
required-features = ["render_graph"]
